--- a/Front/package.json
+++ b/Front/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@dotlottie/dotlottie-js": "^0.8.1",
+    "js-cookie": "^3.0.5",
+    "lottie-web": "^5.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "redux": "^5.0.1",
@@ -20,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/node": "^22.8.2",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
@@ -31,6 +35,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
     "vite": "^5.4.8"
   }
 }
