--- a/Front/package.json
+++ b/Front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@dotlottie/dotlottie-js": "^0.8.1",
+    "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "lottie-web": "^5.12.2",
     "react": "^18.3.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.8.2",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
